--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular2-webpack-starter",
-  "version": "5.0.4",
-  "description": "An Angular 2 Webpack Starter kit featuring Angular 2 (Router, Http, Forms, Services, Tests, E2E, Coverage), Karma, Protractor, Jasmine, Istanbul, TypeScript, and Webpack by AngularClass",
-  "author": "Patrick Stapleton <patrick@angularclass.com>",
-  "homepage": "https://github.com/angularclass/angular2-webpack-starter",
+  "name": "ng-2-webpack-playground",
+  "version": "0.0.1",
+  "description": "An Angular 2 Webpack Playground",
+  "author": "Russell Wenban <russell@factornine.co.uk",
+  "homepage": "https://github.com/russellf9/ng-2-webpack-playground",
   "license": "MIT",
   "scripts": {
      "rimraf": "rimraf",
@@ -142,10 +142,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/angularclass/angular2-webpack-starter.git"
+    "url": "https://github.com/russellf9/ng-2-webpack-playground.git"
   },
   "bugs": {
-    "url": "https://github.com/angularclass/angular2-webpack-starter/issues"
+    "url": "https://github.com/russellf9/ng-2-webpack-playground/issues"
   },
   "engines": {
     "node": ">= 4.2.1",
